--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,7 +86,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/koperasi.png"
+  image_path: "assets/images/ic_excel.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
